ECL 0.9k:
=========

* Visible changes:

 - The documentation is slowly disappearing form this source tree, as there
   is a different tree (ecl-doc) which contains the XML sources for a more
   complete manual.

 - RENAME-FILE now accepts a keyword argument :IF-EXISTS, which defines the
   behavior when a file with the new name already exists (Geo Carncross).

 - Improved hashing on 64-bit machines.

 - The physical pathname format has changed from [device:][[//hostname]/]...
   to [[device:[//hostname]]/]... The reason is that this allows proper
   parsing of Unix pathnames such as "//usr/".

* CLOS:

 - When caching generic function calls, ECL now uses a thread-local hash table
   instead of one hash table per generic function.

* Bugs fixed:

 - The bignums produced by RANDOM did not have enough random bits.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***