@@ -577,8 +577,8 @@ cl_object comma_reader(cl_object in, cl_object c)
 
 	if (backq_level <= 0)
 		FEreader_error("A comma has appeared out of a backquote.", in, 0);
-	/* Read character but skip spaces & complain at EOF */
-	c = cl_peek_char(2,Ct,in);
+	/* Read character & complain at EOF */
+	c = cl_peek_char(2,Cnil,in);
 	if (c == CODE_CHAR('@@')) {
 		x = @'si::unquote-splice';
 		ecl_read_char(in);
